Modifique contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -38,7 +38,7 @@
 
             <fieldset>
             
-                <legend>¿Como le gustaria que lo contactemos?</legend>
+                <legend>¿Como le gustaría que lo contactemos?</legend>
 
                 <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
                 
